OPE-1289 Use composable index templates (#1240)
* impl(backend): use composable index templates
- create settings component template
- remove order from json config
* impl(backend): remove template order test

Related with OPE-1289